[package]
name = "secko_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
secko_messages = { path = "../messages" }
ocaml-sys = "0.23.0"
ocaml-derive = "0.22.0"
ocaml-interop="0.8.8"
ocaml = {version = "^1.0.0-beta"}
prost = "0.11"
bytes = "1"
lockfree=">=0.5.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
dashmap="4.0.1"
delegate="0.9.0"
atomic-counter="1.0.1"
rand="*"
bincode="1.3.3"

[build-dependencies]
ocaml-build = {version = "^1.0.0-beta"}
prost-build = "0.11"