[package]
name = "secko_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secko_messages = { path = "../messages" }
prost = "0.11"
bytes = "1"
lockfree=">=0.5.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
dashmap="4.0.1"
delegate="0.9.0"
atomic-counter="1.0.1"
rand="*"
bincode="1.3.3"
arc="0.0.1"
clap= { version = "4.2.2", features = ["cargo"] }
chrono="0.4.24"

[build-dependencies]
ocaml-build = {version = "^1.0.0-beta"}
prost-build = "0.11"