[package]
name = "secko_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test_client"
path = "src/client.rs"

[[bin]]
name = "fail_client"
path = "src/failure_client.rs"

[dependencies]
secko_messages = { path = "../messages" }
prost = "0.11"
bytes = "1"
lockfree=">=0.5.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
dashmap="4.0.1"
delegate="0.9.0"
atomic-counter="1.0.1"
rand="0.6.5"
bincode="1.3.3"
chrono="0.4.24"
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.27"
rand_distr = "*"
clap= { version = "4.2.2", features = ["cargo"] }