(include_subdirs unqualified)

(rule
 (deps
  (glob_files *.rs))
 (targets libsecko_client.a dllsecko_client.so)
 (action
  (progn
   ; Build the Rust code
   (run cargo build --target-dir %{project_root}/../../target --release)
   ; This is needed to support Linux and macOS shared libraries
   (run sh -c
     "mv %{project_root}/../../target/release/libsecko_client.so ./dllsecko_client.so 2> /dev/null || mv %{project_root}/../../target/release/libsecko_client.dylib ./dllsecko_client.so")
   ; Copy over the static library too
   (run mv %{project_root}/../../target/release/libsecko_client.a
     libsecko_client.a))))

(library
 (name secko_client)
 (public_name secko_client)
 (modules rust)
 (foreign_archives secko_client)
 (c_library_flags
  (-lpthread -lc -lm)))

(executable
 (name test)
 (public_name test)
 (libraries secko_client)
 (modules test)
 (preprocess no_preprocessing))

; (dirs :standard \ target)
